# otopi

./: .gitignore  .ovirtci.yaml  ChangeLog  INSTALL  LICENSE  MAINTAINERS  Makefile.am  README  README.API  README.API.md  README.config-query  README.debug-plugins  README.dialog  README.environment  README.localization  README.md  autogen.sh  configure.ac  otopi.spec.in
.copr/: Makefile
.devcontainer/: devcontainer.json
.github/workflows/: check-patch.yml  codeql-analysis.yml
automation/: build-artifacts-manual.sh  build-artifacts.packages  build-artifacts.packages.el7  build-artifacts.packages.el8  build-artifacts.repos.el8  build-artifacts.repos.el8stream  build-artifacts.sh  build-srpm.sh  check-merged.packages  check-merged.sh  check-patch.packages  check-patch.packages.el7  check-patch.packages.el8  check-patch.repos.el7  check-patch.sh  common.sh  coverage.rc  coverage.rc.in  index.html  run-checks.sh
automation/testRPMs/testpackage1/: testpackage1.spec.in
automation/testRPMs/testpackage2/: testpackage2.spec.in
automation/testRPMsUpdates/testpackage1/: testpackage1.spec.in
automation/testRPMsUpdates/testpackage2/: testpackage2.spec.in
automation/testbin/: ls
automation/testplugins/bad_plugin1/: __init__.py  bad_plugin1.py
automation/testplugins/change_env_type/: __init__.py  change_env_type.py
automation/testplugins/check_filter_hidden/: __init__.py  check_filter_hidden.py
automation/testplugins/duplicate_method_names/: __init__.py  duplicate_method_names.py
automation/testplugins/event_cyclic_dep/: __init__.py  event_cyclic_dep.py
automation/testplugins/non_existent_before_after/: __init__.py  non_existent_before_after.py
m4/: ax_ln_sr.m4
po/: Makevars  POTFILES.in  pt_BR.po
src/: Makefile.am
src/java/: .gitignore  Event.java  MachineDialogParser.java  MachineDialogParserTest.java  Makefile.am  SoftError.java  pom.xml.in
src/otopi/: Makefile.am  __init__.py  __main__.py  base.py  command.py  common.py  config.py.in.in  constants.py  context.py  dialog.py  filetransaction.py  main.py  minidnf.py  miniyum.py  packager.py  plugin.py  services.py  transaction.py  util.py
src/otopi/codegen/: Makefile.am  __init__.py  __main__.py
src/plugins/: Makefile.am
src/plugins/otopi/: Makefile.am
src/plugins/otopi/core/: Makefile.am  __init__.py  config.py  log.py  misc.py  transaction.py
src/plugins/otopi/debug/: Makefile.am
src/plugins/otopi/debug/debug_failure/: Makefile.am  __init__.py  debug_failure.py
src/plugins/otopi/debug/force_fail/: Makefile.am  __init__.py  force_fail.py
src/plugins/otopi/debug/test_command/: Makefile.am  __init__.py  test_command.py
src/plugins/otopi/debug/test_note/: Makefile.am  __init__.py  test_note.py
src/plugins/otopi/debug/wait_on_error/: Makefile.am  __init__.py  wait_on_error.py
src/plugins/otopi/dialog/: Makefile.am  __init__.py  answer_file.py  cli.py  constants.py  human.py  machine.py  misc.py
src/plugins/otopi/network/: Makefile.am  __init__.py  firewalld.py  hostname.py  iptables.py  ssh.py
src/plugins/otopi/packagers/: Makefile.am  __init__.py  core.py  dnfpackager.py  miniyum.py  miniyumlocal.py  yumpackager.py
src/plugins/otopi/services/: Makefile.am  __init__.py  openrc.py  rhel.py  systemd.py
src/plugins/otopi/system/: Makefile.am  __init__.py  clock.py  command.py  info.py  reboot.py
